@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-16T00:51:42Z",
-  "count" : 292,
+  "timestamp" : "2024-04-29T08:16:12Z",
+  "count" : 132,
   "count_minmax" : [ 106, 292 ],
-  "count_decinc" : [ -0, +292 ],
-  "uniques" : 3,
+  "count_decinc" : [ -160, +292 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
