@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-04-29T00:53:52Z",
+  "timestamp" : "2024-04-29T08:16:12Z",
   "count_outdated" : 199270,
   "uniques_outdated" : 2009,
-  "count" : 203408,
-  "uniques" : 2030,
+  "count" : 203469,
+  "uniques" : 2031,
   "clones" : [
     {
       "timestamp": "2024-04-15T00:00:00Z",
-      "count": 292,
+      "count": 132,
       "count_minmax": [ 106, 292 ],
-      "count_decinc": [ 0, 292 ],
-      "uniques": 3,
+      "count_decinc": [ 160, 292 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2024-04-16T00:00:00Z",
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2024-04-26T00:00:00Z",
-      "count": 295,
+      "count": 244,
       "count_minmax": [ 110, 295 ],
-      "count_decinc": [ 51, 346 ],
+      "count_decinc": [ 102, 346 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 295,
       "count_minmax": [ 110, 295 ],
       "count_decinc": [ 0, 295 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-29T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
